--- a/GLSandbox/GLSandbox.vcxproj.filters
+++ b/GLSandbox/GLSandbox.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="src\tests\TestPerspective.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\tests\TestCube.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dependencies\GLFW\include\GLFW\glfw3.h">
@@ -995,6 +998,9 @@
     <ClInclude Include="src\tests\TestPerspective.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\tests\TestCube.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\vendor\glm\detail\func_common.inl">
@@ -1407,6 +1413,8 @@
     </None>
     <None Include="res\shaders\shader.vert" />
     <None Include="res\shaders\shader.frag" />
+    <None Include="res\shaders\cube.vert" />
+    <None Include="res\shaders\cube.frag" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\texture.jpg">
