--- a/GLSandbox/GLSandbox.vcxproj
+++ b/GLSandbox/GLSandbox.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="src\IndexBuffer.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Shader.cpp" />
+    <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\tests\TestCube.cpp" />
     <ClCompile Include="src\tests\TestPerspective.cpp" />
     <ClCompile Include="src\tests\TestTexture2D.cpp" />
@@ -155,10 +156,12 @@
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
     <ClCompile Include="src\VertexArray.cpp" />
     <ClCompile Include="src\VetexBuffer.cpp" />
+    <ClCompile Include="src\tests\TestCamera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dependencies\GLFW\include\GLFW\glfw3.h" />
     <ClInclude Include="Dependencies\GLFW\include\GLFW\glfw3native.h" />
+    <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\tests\TestCube.h" />
     <ClInclude Include="src\tests\TestPerspective.h" />
     <ClInclude Include="src\tests\TestTexture2D.h" />
@@ -463,6 +466,7 @@
     <ClInclude Include="src\VertexArray.h" />
     <ClInclude Include="src\VertexBuffer.h" />
     <ClInclude Include="src\VertexBufferLayout.h" />
+    <ClInclude Include="src\tests\TestCamera.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\cube.frag" />
